tests/ui/tests/lowering/malformed-attribute-arguments.stderr
error[E018]: lint `never-gonna-be-implied` does not exist
 --> ${DIRECTORY}/lowering/malformed-attribute-arguments.lushui:3:9
  |
3 | @(allow never-gonna-be-implied)
  |         ^^^^^^^^^^^^^^^^^^^^^^ 
  |

error[E027]: found text literal, but expected positional or named path
 --> ${DIRECTORY}/lowering/malformed-attribute-arguments.lushui:6:9
  |
6 | @(allow "my lint")
  |         ^^^^^^^^^ 
  |

error[E027]: found text literal, but expected path
 --> ${DIRECTORY}/lowering/malformed-attribute-arguments.lushui:7:16
  |
7 | @(forbid (lint "my other one"))
  |                ^^^^^^^^^^^^^^ 
  |

error[E019]: too few attribute arguments provided
 --> ${DIRECTORY}/lowering/malformed-attribute-arguments.lushui:8:1
  |
8 | @deny
  | ^^^^^ 
  |

error[E028]: found named argument `reech`, but expected `reach`
  --> ${DIRECTORY}/lowering/malformed-attribute-arguments.lushui:11:11
   |
11 | @(public (reech path) "hello")
   |           ^^^^^ 
   |

error[E019]: too many attribute arguments provided
  --> ${DIRECTORY}/lowering/malformed-attribute-arguments.lushui:11:23
   |
11 | @(public (reech path) "hello")
   |                       ^^^^^^^ 
   |

error[E019]: too many attribute arguments provided
  --> ${DIRECTORY}/lowering/malformed-attribute-arguments.lushui:12:21
   |
12 | base: Base = @(Rune 0) "X"
   |                     ^ 
   |

error: aborting due to 7 previous errors
 note: the errors E018, E019, E027 and E028 have a detailed explanation
 help: run `lushui explain <codes...>` to view a selection of them

